# smalls

./: README.md  crc_ccitt.c  expstate.c
abs-script/: checksize.sh  datediff.sh  llsum
api-examples-msdn/: begthrd.c  clock.c  crt_mbstowcs.c  crt_printf.c  cwait.c  high-level-console-io.c  redirect.c  stack-top.cpp  wprintf-chs.c
api-examples-unix/: abort.c  assert.c  msgget.c  qsort.c  setjmp.c  sigterm.c  strtok.c  waitpid.c  xetitimer.c
arm-gcc-mabi/: Makefile  conc-aapcs-linux.S  conc-aapcs.S  conc-apcs-gnu.S  conc-atpcs.S  conc-frame-aapcs-linux.S  conc-frame-aapcs.S  conc-frame-apcs-gnu.S  conc-frame-atpcs.S  conc.c
arm-gcc-mfloat-abi/: Makefile  hello-mfloat.c  mfloat-abi-hard  mfloat-abi-hard.lss  mfloat-abi-soft  mfloat-abi-soft.lss  mfloat-abi-softfp  mfloat-abi-softfp.lss  mfloat-abi.c
as86/: GNUmakefile  Makefile  address.h  align.h  alloc.c  as.c  as86_encap  assemble.c  asx.c  const.h  errors.c  errors.h  express.c  genbin.c  genlist.c  genobj.c  gensym.c  globvar.h  keywords.c  macro.c  mops.c  opcode.h  pops.c  proto.h  readsrc.c  scan.c  scan.h  table.c  type.h  typeconv.c
bat-file/: ASM.BAT  ASMT.BAT  BAT_SetLocal.BAT  BuildEnv.bat  Build_Dot_Folder.BAT  Copy & Rose & RavMonE病毒杀毒程式 YW制作.bat  DumpArduinoElf.cmd  FindUSBComport.bat  IpSwitch.cmd  MakeBoot.bat  OneKeyShare.cmd  PMBuild.bat  PROCESS.BAT  RemoveSambaCache.cmd  SEP.BAT  ServiceState.cmd  ShowNonpresentDevices.cmd  SysBackup.bat  TCOM.BAT  ThinkInCpp.bat  UseChcp.bat  WiFi-AP.cmd  WinARM_Tool.bat  bat_study.bat  bld32.bat  git-bash-auto.cmd  gpedit-enable.cmd  list.bat  myjava.bat  nproc.cmd  (+14 more)
hello_so/: Makefile.am  Makefile.in  Makefile.mine  configure  configure.in  hello_so.c  hello_so.h  main.c
stl-thread/: Makefile.am  autogen.sh  configure.ac  prime-thread-boost-pool.cc  prime-thread.cc
(+699 files in other folders)
